--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,6 +9,10 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+# print keymaps
+bindsym $mod+F1 exec --no-startup-id ~/.dotfiles/.config/i3/scripts/launch-keymaps.sh
+for_window [class="i3-keymaps"] floating enable, move position center
+
 set $mod Mod4
 
 exec_always feh --bg-fill /usr/share/images/desktop-base/desktop-background
@@ -16,10 +20,6 @@ exec_always feh --bg-fill /usr/share/images/desktop-base/desktop-background
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:"CaskaydiaMono Nerd Font Mono" SemiLight 11
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -35,22 +35,22 @@ exec --no-startup-id xinput set-prop "SynPS/2 Synaptics TouchPad" "libinput Acce
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xset s 300
 exec --no-startup-id xss-lock --transfer-sleep-lock -- ~/.config/i3/lock.sh
+
+# Lock Screen
 bindsym $mod+mod1+l exec ~/.config/i3/lock.sh
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+# reload the configuration file
+bindsym $mod+Shift+c reload
 
-# Increase/decrease screen brightness
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -61,13 +61,20 @@ tiling_drag modifier titlebar
 
 # start a terminal
 bindsym $mod+Return exec alacritty
+
+# start btop monitor
 bindsym $mod+Shift+Return exec alacritty -e btop
+
+# start graphical emacsclient
 bindcode $mod+51 exec emacsclient -c
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
+# switch to keybaord layout US intl
 bindsym $mod+i exec "setxkbmap -layout us -variant intl && notify-send 'Keyboard: US Intl'"
+
+# switch to keybaord layout US
 bindsym $mod+u exec "setxkbmap -layout us && notify-send 'Keyboard: US'"
 
 # start dmenu (a program launcher)
@@ -78,42 +85,50 @@ bindsym $mod+u exec "setxkbmap -layout us && notify-send 'Keyboard: US'"
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
+# split in vertical orientation
+bindsym $mod+v split v
+
+# split in horizontal orientation
+bindsym $mod+Shift+v split h
+
 # change focus
+
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
+
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
+
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
+
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-bindsym $mod+Shift+v split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
+# change container layout stacked
 bindsym $mod+s layout stacking
+
+# change container layout tabbed
 bindsym $mod+w layout tabbed
+
+# change container layout toggle split
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
@@ -126,7 +141,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+Shift+a focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -142,6 +157,7 @@ set $ws9 "9"
 set $ws10 "10"
 
 # switch to workspace
+
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -154,6 +170,7 @@ bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
+
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -165,38 +182,37 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        # Pressing h will shrink the window’s width.
+        bindsym h resize shrink width 10 px or 10 ppt
+        # Pressing j will grow the window’s width.
+        bindsym j resize grow height 10 px or 10 ppt
+        # Pressing k will shrink the window’s height.
+        bindsym k resize shrink height 10 px or 10 ppt
+        # Pressing l will grow the window’s height.
+        bindsym l resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
+        # Pressing left will shrink the window’s width.
         bindsym Left resize shrink width 10 px or 10 ppt
+        # Pressing right will grow the window’s width.
         bindsym Down resize grow height 10 px or 10 ppt
+        # Pressing up will shrink the window’s height.
         bindsym Up resize shrink height 10 px or 10 ppt
+        # Pressing down will grow the window’s height.
         bindsym Right resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
+        # back to normal: Enter or Escape or $mod+r
         bindsym Escape mode "default"
+        # back to normal: Enter or Escape or $mod+r
         bindsym $mod+r mode "default"
 }
 
+# resize Windows
 bindsym $mod+r mode "resize"
 
 for_window [class="^.*"] border pixel 3
@@ -229,11 +245,30 @@ bar {
   }
 }
 
+# Start dmenu application laucher
 bindsym $mod+d exec "dmenu_run -nf '#BBBBBB' -nb '#222222' -sb '#265C7C' -sf '#EEEEEE' -p 'dmenu prompt >'"
+
+# Start rofi application laucher
 bindsym $mod+q exec "rofi -modi window,drun,run -show drun -terminal alacritty"
 
 # Transparency with picom compositor
 exec_always picom -f
+
+set $refresh_i3status killall -SIGUSR1 i3status
+
+# increase screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
+# decrease screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+
+# adjust volume in PulseAudio +10%
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+# adjust volume in PulseAudio -10%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+# PulseAudio mute speakers
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+# PulseAudio mute microphone
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # default gaps
 gaps inner 15
@@ -242,7 +277,9 @@ gaps outer 3
 # Toggle gaps on/off
 bindsym $mod+g gaps inner current toggle 15; gaps outer current toggle 3
 
-# gaps
+# adjust gaps
+bindsym $mod+Shift+g mode "$mode_gaps"
+
 set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
 set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
@@ -252,7 +289,6 @@ set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
 set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
-bindsym $mod+Shift+g mode "$mode_gaps"
 
 mode "$mode_gaps" {
         bindsym o      mode "$mode_gaps_outer"
