--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -14,7 +14,7 @@ corner-radius = 0;
 rounded-corners-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 blur-kern = "3x3box";
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'", "_GTK_FRAME_EXTENTS@:c" ];
-backend = "xrender";
+backend = "glx";
 vsync = true;
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
